iowow (1.4.16) UNRELEASED; urgency=medium

  * Added iwxstr_insert() (iwxstr.h)
  * ~8% IO performance improvements due to use of MADV_RANDOM
  * Fixed Github Vulnerability Report GHSL-2022-066
  * Added additional IW_ERROR_XX codes (iwlog.h)
  * Added VERBOSE log level (iwlog.h)
  * Added iwhmap_put_str() (iwhmap.h)
  * Added iwulist_remove_first_by(), iwulist_find_first() (iwarr.h)
  * Added iwxstr_new_printf() (iwxstr.h)
  * Reduced iwkv code complexity. Removed in-memory db cache since benchmarks shows only minor perf imprivements with cache.
  * Fixed many of UB errors (eg: misaligned access)
  * Removed dependency on kbtree.h replaced with iwavl.h
  * Added json module (migrated from ejdb) (iwjson.h, iwbinn.h)
  * Added platform neutral iwp_basename() and iwp_dirname() (iwp.h)
  * Added iwu_file_read_as_buf_len() (iwutils.h)
  * Added IW_NORET (basedefs.h)
  * iwxstr_destroy_keep_ptr() now returns pointer to underlying buffer
  * IWHMAP can operate in LRU cache mode (iwhmap.h)
  * Added .ini file parsing utility module (iwini.h)
  * Added iw_cond_timed_wait_ms() (iwth.h)
  * Added iwstw_set_on_task_discard(), iwstw_schedule_only() (iwstw.h)
  * Fixed iwp_exec_path() on FreeBSD sinceprocfs(5) is not mounted by default in FreeBSD.
  * iwp_exec_path() implemented for FreeBSD & Macos
  * Added `int64_t iwatoi2(const char *str, size_t len)` (iwconv.h)
  * iwpool_split_xx() now returns const pointer (iwpool.h)
  * Fixed iwre() regexp compilation error.
  * Added new regexp API implementation (iwre.h) based on https://github.com/jserv/cregex/
  * Removed iwsha256() from sources. Use iwnet/beassl for hashing instead.

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 24 Feb 2022 09:18:55 +0700

iowow (1.4.15) testing; urgency=medium

  * Added format checking __attribute__ to all printf like functions.

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 18 Feb 2022 21:54:04 +0700

iowow (1.4.14) testing; urgency=medium
